# hihitonv2

.deploy/: docker-compose.yaml
.deploy/proxy/: Dockerfile
.deploy/proxy/conf.d/: default.conf
backend/.build/: docker-compose.yaml
backend/.build/app/: Dockerfile
backend/.build/proxy/conf.d/: default.conf
backend/.dev-build/: docker-compose.yaml
backend/project/: .env.example  Cargo.toml
backend/project/src/: main.rs
backend/project/src/utils/: database.rs  load_config.rs  mod.rs
backend/project/src/utils/documentation/: mod.rs
backend/project/src/utils/error_handlers/: api_error_structs.rs  impl_api_error.rs  mod.rs
backend/project/src/utils/responses/: mod.rs
frontend/.build/app/: Dockerfile
frontend/project/: package-lock.json  package.json
frontend/project/src/: App.vue
frontend/project/src/layouts/: AppFooter.vue  AppHeader.vue  DefaultLayout.vue
frontend/project/src/pages/: HomePage.vue
frontend/project/src/router/: index.js
frontend/project/src/stores/: counter.js
